--- a/src/RecipeListItem.module.css
+++ b/src/RecipeListItem.module.css
@@ -3,6 +3,11 @@
   justify-content: space-between;
   padding: 0.75rem 0;
   border-top: 1px solid lightgray;
+  align-items: center;
+}
+
+.data {
+  width: 60%;
 }
 
 .name {
@@ -10,6 +15,17 @@
   margin-right: 0.5rem;
 }
 
-.tools span {
-  margin-left: 0.5rem;
+.category {
+  width: 20%;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.tools {
+  width: 20%;
+
+  display: flex;
+  justify-content: flex-end;
 }
