--- a/src/forms/InputSearch.module.css
+++ b/src/forms/InputSearch.module.css
@@ -1,5 +1,24 @@
 .input {
+  width: 100%;
   height: 2.5rem;
   padding: 0.5rem 1rem;
+  padding-left: 3rem;
   border-radius: var(--radius-sm);
+}
+
+input::placeholder {
+  color: var(--color-lightgray);
+}
+
+.wrapper {
+  position: relative;
+}
+
+.icon {
+  height: 1.25 + rem;
+  width: 1.25rem;
+  left: 1rem;
+  top: 0.575rem;
+
+  position: absolute;
 }
