--- a/src/ListItem.module.css
+++ b/src/ListItem.module.css
@@ -2,24 +2,19 @@
   display: flex;
   justify-content: space-between;
   padding: 0.75rem 0;
-  border-top: 1px solid lightgray;
+  border-top: 1px solid var(--color-lightgray);
   align-items: center;
 }
 
-.data {
-  width: 60%;
-}
-
 .name {
-  font-weight: bold;
-  margin-right: 0.5rem;
+  width: 60%;
 }
 
 .category {
   width: 20%;
+  font-size: 0.875rem;
 
   display: flex;
-  justify-content: center;
   align-items: center;
 }
 
