--- a/src/forms/InputSearch.module.css
+++ b/src/forms/InputSearch.module.css
@@ -3,11 +3,12 @@
   height: 2.5rem;
   padding: 0.5rem 1rem;
   padding-left: 3rem;
-  border-radius: var(--radius-sm);
+  border: 1px solid var(--color-lightgray);
+  border-radius: var(--radius-md);
 }
 
 input::placeholder {
-  color: var(--color-lightgray);
+  color: var(--color-gray);
 }
 
 .wrapper {
@@ -16,10 +17,10 @@ input::placeholder {
 
 .icon {
   pointer-events: none;
-  height: 1.25 + rem;
+  height: 1.25rem;
   width: 1.25rem;
   left: 1rem;
-  top: 0.575rem;
+  top: 0.65rem;
 
   position: absolute;
 }
