--- a/src/forms/Select.module.css
+++ b/src/forms/Select.module.css
@@ -9,16 +9,16 @@
   padding: 0.5rem 1rem;
   padding-right: 3rem;
   appearance: none;
-  border-radius: var(--radius-sm);
+  border: 1px solid var(--color-lightgray);
+  border-radius: var(--radius-md);
 }
 
 .icon {
   pointer-events: none;
   position: absolute;
-  height: 1.5rem;
-  width: 1.5rem;
-  color: var(--colo-gray);
-  top: 0.5rem;
+  height: 1.25rem;
+  width: 1.25rem;
+  top: 0.65rem;
   right: 0.75rem;
   background-color: white;
 }
