Create IconButton component

--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -8,6 +8,7 @@
   --color-lightblue: #d1e2fd;
   --color-lightred: #ffd7e7;
   --color-lightyellow: #f5e8b6;
+  --color-red: #ff1f1f;
   --color-gray: #909090;
   --color-lightgray: #cbcbcb;
   --color-black: #000000;
