--- a/src/buttons/IconButton.module.css
+++ b/src/buttons/IconButton.module.css
@@ -6,7 +6,6 @@
   align-items: center;
   justify-content: center;
 
-  border: none;
   border-radius: var(--radius-md);
 }
 
@@ -15,38 +14,16 @@
   width: 1.25rem;
 }
 
-.black {
-  color: var(--color-black);
-}
-
-.red {
-  color: var(--color-red);
-}
-
-.black,
-.red {
+.regular {
+  border: 1px solid var(--color-gray);
   background-color: transparent;
 }
 
-.black:disabled,
-.red:disabled {
-  color: var(--color-lightgray);
+.error {
+  border: 1px solid var(--color-red);
+  background-color: transparent;
 }
 
-.blackFilled {
-  background-color: var(--color-black);
-}
-
-.redFilled {
-  background-color: var(--color-red);
-}
-
-.blackFilled,
-.redFilled {
-  color: var(--color-white);
-}
-
-.blackFilled:disabled,
-.redFilled:disabled {
-  background-color: var(--color-lightgray);
+.regular:disabled {
+  border-color: var(--color-lightgray);
 }
