--- a/src/components/ManagerToolbar.module.css
+++ b/src/components/ManagerToolbar.module.css
@@ -3,4 +3,21 @@
   align-items: center;
   justify-content: space-between;
   margin-bottom: 1.5rem;
+  gap: 1rem;
+}
+
+.wrapper {
+  width: 50%;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+.categories,
+.sort {
+  width: 100%;
+}
+
+.search {
+  width: 48%;
 }
