--- a/src/components/buttons/Button.module.css
+++ b/src/components/buttons/Button.module.css
@@ -2,7 +2,7 @@
   cursor: pointer;
   height: 2.5rem;
   padding: 0 1rem;
-  border: 1px solid var(--color-black);
+  border: 1px solid var(--color-lightgray);
   border-radius: var(--radius-md);
   background-color: var(--color-white);
 }
