--- a/src/components/buttons/Button.module.css
+++ b/src/components/buttons/Button.module.css
@@ -19,6 +19,10 @@
   border-color: var(--color-black);
 }
 
+.borderless {
+  border-color: transparent;
+}
+
 .iconButton {
   width: 2.5rem;
   padding: 0;
