--- a/src/components/form-controls/InputText.module.css
+++ b/src/components/form-controls/InputText.module.css
@@ -2,7 +2,6 @@
   width: 100%;
   height: 2.5rem;
   padding: 0.5rem 1rem;
-  margin: 0.5rem 0;
   border: 1px solid var(--color-lightgray);
   border-radius: var(--radius-md);
 }
@@ -17,4 +16,8 @@
 
 .error .message {
   color: var(--color-red);
+}
+
+.label {
+  margin-bottom: 0.5rem;
 }
