--- a/src/components/form-controls/InputText.module.css
+++ b/src/components/form-controls/InputText.module.css
@@ -4,6 +4,7 @@
   padding: 0.5rem 1rem;
   border: 1px solid var(--color-lightgray);
   border-radius: var(--radius-md);
+  margin-bottom: 0.5rem;
 }
 
 .input::placeholder {
